--- a/polybar/config
+++ b/polybar/config
@@ -8,13 +8,10 @@
 ;=====================================================
 
 [colors]
-;background = ${xrdb:color0:#222}
-background = #222
-background-alt = #444
-;foreground = ${xrdb:color7:#222}
-foreground = #dfdfdf
-foreground-alt = #555
-primary = #ffb52a
+background = #fdf6e3
+background-alt = #fdf6e3
+foreground = #657b83
+primary = #268bd2
 secondary = #e60053
 alert = #bd2c40
 
@@ -25,15 +22,20 @@ fixed-center = false
 
 background = ${colors.background}
 foreground = ${colors.foreground}
-module-margin-left = 1
-module-margin-right = 2
+
+line-size = 3
 
 font-0 = fixed:pixelsize=10;1
 font-1 = "Symbola;1"
+font-2 = unifont:fontformat=truetype:size=8:antialias=false;0
+font-3 = siji:pixelsize=10;1
 
+module-margin-left = 1
+module-margin-right = 2
 modules-left = bspwm
 modules-center = title
 modules-right = volume battery date
+
 tray-position = right
 tray-padding = 2
 
@@ -91,7 +93,7 @@ label-volume = 🔊
 label-volume-foreground = ${root.foreground}
 
 format-muted = <label-muted> <bar-volume>
-format-muted-foreground = ${colors.foreground-alt}
+format-muted-foreground = ${colors.foreground}
 label-muted = 🔇
 
 bar-volume-width = 10
@@ -109,13 +111,13 @@ bar-volume-fill = ─
 bar-volume-fill-font = 2
 bar-volume-empty = ─
 bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
+bar-volume-empty-foreground = ${colors.foreground}
 
 [module/battery]
 type = internal/battery
 battery = BAT1
 adapter = ADP1
-full-at = 98
+full-at = 96
 
 label-charging = 🔌 %percentage%% %time%
 label-discharging = 🔋 %percentage%% %time%
