--- a/polybar/config
+++ b/polybar/config
@@ -88,30 +88,13 @@ label = %date% %time%
 [module/volume]
 type = internal/volume
 
-format-volume = <label-volume> <bar-volume>
-label-volume = 🔊
+format-volume = <label-volume>
+label-volume = 🔊 %percentage%%
 label-volume-foreground = ${root.foreground}
 
-format-muted = <label-muted> <bar-volume>
+format-muted = <label-muted>
 format-muted-foreground = ${colors.foreground}
-label-muted = 🔇
-
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 2
-bar-volume-fill = ─
-bar-volume-fill-font = 2
-bar-volume-empty = ─
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground}
+label-muted = 🔇%percentage%%
 
 [module/battery]
 type = internal/battery
