--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,9 @@
 #  Configuration
 ###########################
 
+# enable 256 color support
+set -g default-terminal "screen-256color"
+
 # use vim key bindings
 setw -g mode-keys vi
 
