--- a/polybar/config
+++ b/polybar/config
@@ -16,6 +16,10 @@ secondary = #e60053
 alert = #bd2c40
 
 [bar/top]
+monitor = eDP1
+monitor-fallback = DP1-2
+wm-restack = bspwm
+
 width = 100%
 height = 25
 fixed-center = false
