--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -39,14 +39,14 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-selection
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
 
 # Scroll up and down using the mouse wheel
 bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
-bind-key -t vi-copy WheelUpPane halfpage-up
-bind-key -t vi-copy WheelDownPane halfpage-down
+bind-key -T copy-mode-vi WheelUpPane send -X halfpage-up
+bind-key -T copy-mode-vi WheelDownPane send -X halfpage-down
 
 # quickly switch panes
 unbind ^Space
@@ -100,6 +100,8 @@ set-window-option -g window-status-current-format '#[fg=red,bold]#I:#W'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @yank_selection 'clipboard'
+set -g @yank_selection_mouse 'clipboard'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
