[tmux] Fix tmux copy

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -40,7 +40,7 @@ bind Escape copy-mode
 unbind p
 bind p paste-buffer
 bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
+bind-key -T copy-mode-vi y send -X copy-pipe 'xclip -i -sel p -f | xclip -i -sel c'
 
 # Scroll up and down using the mouse wheel
 bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
